Fixed animal group builder overflow issues

--- a/src/components/AnimalEditor/AnimalEditorGroupBuilder.module.css
+++ b/src/components/AnimalEditor/AnimalEditorGroupBuilder.module.css
@@ -45,7 +45,7 @@
   align-items: center;
   background-color: var(--elevation2);
   display: grid;
-  grid-template-columns: 1.6em 4.5em 1.6em 3.5em 1.6em 1fr;
+  grid-template-columns: 1.5em 4.3em 1.5em 3.4em 1.5em 1fr;
   padding: 0.25em;
   position: relative;
 }
